src/main/resources/static/css/mainv2_3.css
/* ... */
.far.fa-fw.fa-edit {
  color: #004252;
}
.far.fa-fw.fa-edit.white-style {
  border: none;
  color: white;
}

.dark-teal-bg a,
.black-bg a {
  color: white;
  text-decoration: underline;
}
.dark-teal-bg a:active, .dark-teal-bg a:focus, .dark-teal-bg a:hover,
.black-bg a:active,
.black-bg a:focus,
.black-bg a:hover {
  color: lightgrey;
}

.btn.dark-teal-bg:active, .btn.dark-teal-bg:focus, .btn.dark-teal-bg:hover {
  color: #efefef;
  background: #004e59;
}

.deep-blue-bg {
  background-color: #424895;
  color: white;
}

.black-bg {
  background-color: #212121;
  color: white;
}

.seafoam-bg {
  background-color: #e3f2ef;
  color: #212121;
}

.green-blue-bg {
  background-color: #004e59;
}

.dark-teal-bg {
  background-color: #004252;
}

.teal-bg {
  background-color: #0d7078;
}

.blue-bg {
  background-color: #00a6b2;
}

.light-teal-bg {
  background-color: #52c4b5;
}

.teal-tint-bg {
  background-color: #c7e7e0;
}

h1, h2, h3, h5, .text-left, span {
  color: #1c6070;
}

h1 {
  font-size: 2rem;
}

h2 {
  font-size: 2rem;
  padding: 0px;
}

h3 {
  font-size: 1.17rem;
}

h4 {
  font-size: 1rem;
}

.modal-black-text {
  color: black;
}

.tab-color {
  color: #212121;
}
.tab-color:hover,
.tab-color :focus,
.tab-color :active {
  color: #212121;
}

.font-weight-bold {
  font-weight: bold;
}

.font-weight-normal {
  font-weight: normal;
}

.hover-text {
  font-size: 0px;
}

.no-memberships-text {
  text-align: center;
}

.link {
  color: #007bff;
}

/* comment */
@font-face {
  font-family: 'Source Sans Pro';
  font-weight: 400;
  src: url("../fonts/SourceSansPro-Regular.ttf");
}
@font-face {
  font-family: 'Source Sans Pro';
  font-weight: 400;
  font-style: italic;
  src: url("../fonts/SourceSansPro-Italic.ttf");
}
@font-face {
  font-family: 'Source Sans Pro';
  font-weight: 600;
  src: url("../fonts/SourceSansPro-SemiBold.ttf");
}
@font-face {
  font-family: 'Source Sans Pro';
  font-weight: 600;
  font-style: italic;
  src: url("../fonts/SourceSansPro-SemiBoldItalic.ttf");
}
@font-face {
  font-family: 'Source Sans Pro';
  font-weight: 700;
  src: url("../fonts/SourceSansPro-Bold.ttf");
}
@font-face {
  font-family: 'Source Sans Pro';
  font-weight: 700;
  font-style: italic;
  src: url("../fonts/SourceSansPro-BoldItalic.ttf");
}
@font-face {
  font-family: 'Source Sans Pro';
  font-weight: 900;
  src: url("../fonts/SourceSansPro-Black.ttf");
}
@font-face {
  font-family: 'Source Sans Pro';
  font-weight: 900;
  font-style: italic;
  src: url("../fonts/SourceSansPro-BlackItalic.ttf");
}
.navbar {
  background-color: white;
  padding-top: 0;
  padding-bottom: 0;
}
.navbar .navbar-nav .nav-link {
  color: #454545;
}
.navbar .navbar-nav .nav-link:hover, .navbar .navbar-nav .nav-link:focus, .navbar .navbar-nav .nav-link:active {
  color: #0d7078;
}
.navbar .navbar-nav .nav-item {
  padding-left: .3125rem;
  padding-right: .3125rem;
}
@media (min-width: 992px) {
  .navbar .nav {
    padding: 2.5rem 1.25rem 0 0;
    background-color: white;
  }
  .navbar .navbar-brand {
    padding: 0;
  }
  .navbar .navbar-brand > img {
    background-color: transparent;
  }
}

.fixed-top .navbar-brand {
  padding: 0;
}

.nav-tabs .nav-link {
  border: none;
}
.nav-tabs .nav-item {
  margin-top: 1rem;
}

.nav-link {
  white-space: nowrap;
}

.nav.nav-tabs {
  border-bottom: none;
}

.tooltip {
  pointer-events: none;
}
@media (max-width: 991.98px) {
  .tooltip .tooltip {
    display: none;
  }
}

#group-pills > .nav-item {
  width: 2.75rem;
  height: 2.75rem;
}
#group-pills > .nav-item > .nav-link {
  padding-left: .75rem;
}

.nav-item.mx-auto .nav-link.rounded-circle .side-nav {
  align-items: center;
}
@media (max-width: 575.98px) {
  .nav-item.mx-auto .nav-link.rounded-circle .side-nav {
    border: none;
    background-color: #e3f2ef;
    padding: 0 0 2px 0;
  }
}

.nav-pills .show > .nav-link {
  background: white;
  color: #004252;
}

.nav-pills .nav-link {
  color: #004252;
  height: 44px;
}
.nav-pills .nav-link.active {
  position: relative;
  background-color: white;
  background: white;
  color: #004252;
}
@media (min-width: 768px) {
  .nav-pills .nav-link.active:after {
    border-width: 10px 10px 10px 0;
    border-color: transparent #fff transparent transparent;
    top: 25%;
  }
}

th {
  font-size: .8rem;
  letter-spacing: .5px;
  text-transform: uppercase;
}

table {
  width: 80%;
  margin-bottom: 30px;
}
table .p-10 {
  white-space: nowrap;
  padding: 5px 20px !important;
}
table .p-11 {
  white-space: nowrap;
  padding: 5px 25px !important;
}
table .p-12 {
  white-space: nowrap;
  padding: 5px 30px !important;
}
table .w-20 {
  width: 20%;
  padding: 8px;
}

.sort-icon::after {
  content: '\f107';
}
.sort-icon.reverse::after {
  content: '\f106';
}

form.seamless {
  display: flex;
  min-width: 12rem;
}
form.seamless input {
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  flex: 1;
  width: calc(100% - 50px);
}

.modal-tables {
  margin-bottom: 30px;
}

.import-table-tbody {
  display: block;
  height: 175px;
  overflow-y: auto;
}
.import-table-thead-tbody-tr {
  display: table;
  width: 100%;
  table-layout: fixed;
  white-space: nowrap;
}

.clickable {
  cursor: pointer;
}
.clickable.center-checkbox {
  vertical-align: top;
  margin-left: 5px;
}

.form-check-input {
  position: relative;
  margin-left: 0;
}

.blank-checkbox {
  margin-left: 1rem;
}

.pagination {
  float: right;
}
.pagination .page-item.disabled {
  cursor: not-allowed;
}

.page-item.active > .page-link {
  background-color: #c7e7e0;
  border-color: #c7e7e0;
}

.page-link {
  color: #1c6070;
}

.modal-open .modal {
  overflow-y: hidden;
  overflow-x: hidden;
}

.modal.in .modal-dialog {
  -webkit-transform: none;
  transform: none;
}

.modal-attributes {
  text-transform: initial;
}

.modal-backdrop.in {
  filter: alpha(opacity=50);
  opacity: 0.5;
}

.modal-names {
  overflow: hidden;
  text-overflow: ellipsis;
}
/* ... */

